--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@notionhq/client": "^2.2.2",
+    "@prisma/client": "^4.6.1",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
@@ -21,9 +22,13 @@
     "typescript": "4.9.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
-    "prettier": "^2.7.1"
+    "postcss": "^8.4.19",
+    "prettier": "^2.7.1",
+    "prisma": "^4.6.1",
+    "tailwindcss": "^3.2.4"
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
