--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "autoprefixer": "^10.4.13",
     "husky": "^8.0.2",
     "lint-staged": "^13.0.3",
+    "next-sitemap": "^3.1.32",
     "postcss": "^8.4.19",
     "prettier": "^2.7.1",
     "prisma": "^4.6.1",
