--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^5.8.2",
     "@notionhq/client": "^2.2.2",
     "@prisma/client": "^4.6.1",
+    "@tabler/icons": "^1.112.0",
     "@types/node": "^18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
