회원가입 구현

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@mantine/hooks": "^5.8.2",
     "@notionhq/client": "^2.2.2",
     "@prisma/client": "^4.6.1",
+    "@react-oauth/google": "^0.5.0",
     "@tabler/icons": "^1.112.0",
     "@tanstack/react-query": "^4.16.1",
     "@types/node": "^18.11.9",
@@ -23,6 +24,7 @@
     "draft-js": "^0.11.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
+    "jwt-decode": "^3.1.2",
     "next": "13.0.4",
     "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
