--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DATABASE_URL='mysql://6qs86bk5h25r96592p3v:pscale_pw_kMscPvyFb2qUbl79hC8fvsAGZUTjlzqBXTghSmlVd63@ap-northeast.connect.psdb.cloud/commerce?sslaccept=strict'
+DATABASE_URL='mysql://01es3cu1kcfmafmm9zin:pscale_pw_ImaHGaZCGrwk7XBa58YJcI8KVXK8xhriBQOjgNEOmbq@ap-northeast.connect.psdb.cloud/commerce?sslaccept=strict'
