--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/node": "^18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
+    "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
