찜하기 구현

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL='mysql://7t7zk54pdmyzkzyqf38d:pscale_pw_JPIV7dHFrUr5UJjAIMryKj6maXDMJFoRW8pezJ0t4Kb@ap-northeast.connect.psdb.cloud/commerce?sslaccept=strict'
+
+NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=my-secret
